Cleanup
- Replaced usage of javax.* with jakarta.*
- General cleanup
- Updated dependencies and set compiler version to 14 in pom.xml